// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component should match snapshot with no prop valid 1`] = `
<styled.div
  valid={null}
>
  <styled.select
    isEmpty={true}
    name="dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Dropdown"
    required={true}
    value=""
  >
    <option
      defaultValue={true}
      key="0"
    />
    <option
      key="1"
    >
      one
    </option>
    <option
      key="2"
    >
      two
    </option>
  </styled.select>
</styled.div>
`;

exports[`Dropdown component should match snapshot with no validation and with accountNumber 1`] = `
<styled.div
  valid={null}
>
  <styled.select
    isEmpty={true}
    name="dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Dropdown"
    required={true}
    value=""
  >
    <option
      defaultValue={true}
      key="0"
    />
    <option
      key="1"
    >
      one
    </option>
    <option
      key="2"
    >
      two
    </option>
  </styled.select>
  <styled.label>
    label
  </styled.label>
</styled.div>
`;

exports[`Dropdown component should match snapshot with no validation and without accountNumber 1`] = `
<styled.div
  valid={null}
>
  <styled.select
    isEmpty={true}
    name="dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Dropdown"
    required={true}
    value=""
  >
    <option
      defaultValue={true}
      key="0"
    />
    <option
      key="1"
    >
      one
    </option>
    <option
      key="2"
    >
      two
    </option>
  </styled.select>
  <styled.label>
    label
  </styled.label>
</styled.div>
`;

exports[`Dropdown component should match snapshot with prop valid as boolean 1`] = `
<styled.div
  valid={false}
>
  <styled.select
    isEmpty={true}
    name="dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Dropdown"
    required={true}
    value=""
  >
    <option
      defaultValue={true}
      key="0"
    />
    <option
      key="1"
    >
      one
    </option>
    <option
      key="2"
    >
      two
    </option>
  </styled.select>
</styled.div>
`;
